Fix npm run test and package installation issue
